@@ -4522,7 +4522,18 @@ TkMacOSXGrowToplevel(
 	    limitBounds.top = limits.top + (strBounds.top + strWidths.top);
 	    limitBounds.bottom = limits.bottom +
 		    (strBounds.top + strWidths.top + strWidths.bottom);
-	    SectRect(&limitBounds, maxBounds, &limitBounds);
+	    if (limitBounds.left < maxBounds->left) {
+		limitBounds.left = maxBounds->left;
+	    }
+	    if (limitBounds.right > maxBounds->right) {
+		limitBounds.right = maxBounds->right;
+	    }
+	    if (limitBounds.top < maxBounds->top) {
+		limitBounds.top = maxBounds->top;
+	    }
+	    if (limitBounds.bottom > maxBounds->bottom) {
+		limitBounds.bottom = maxBounds->bottom;
+	    }
 	    limits.left = limitBounds.left - (strBounds.left + strWidths.left);
 	    limits.right = limitBounds.right -
 		    (strBounds.left + strWidths.left + strWidths.right);
